--- a/content/src/app.html
+++ b/content/src/app.html
@@ -13,6 +13,23 @@
 			height: 100vh;
 			margin: 0;
 			padding: 0;
+			background-color: var(--background);
+			color: var(--foreground);
+		}
+
+		:root {
+			--background: rgb(14, 14, 14);
+			--foreground: white;
+			--border: rgb(58, 58, 58);
+			--line-color: #49a4ff;
+		}
+
+		@media (prefers-color-scheme: light) {
+			:root {
+				--background: white;
+				--foreground: rgb(14, 14, 14);
+				--border: rgb(214, 214, 214);
+			}
 		}
 	</style>
 	<body data-sveltekit-preload-data="hover">
