--- a/content/src/app.html
+++ b/content/src/app.html
@@ -25,7 +25,7 @@
 
 		@media (prefers-color-scheme: light) {
 			:root {
-				--background: white;
+				--background: #f5f5f3;
 				--foreground: rgb(14, 14, 14);
 				--border: rgb(214, 214, 214);
 			}
