--- a/content/src/app.html
+++ b/content/src/app.html
@@ -13,6 +13,7 @@
 			padding: 0;
 			background-color: var(--background);
 			color: var(--foreground);
+			font-family: 'Helvetica';
 		}
 
 		:root {
