--- a/content/src/app.html
+++ b/content/src/app.html
@@ -23,6 +23,22 @@
 			--line-color: #49a4ff;
 		}
 
+		h1,
+		h2 {
+			text-align: left;
+			font-weight: bold;
+			font-style: italic;
+		}
+
+		h1 {
+			line-height: 50px;
+			font-size: 4rem;
+		}
+
+		h2 {
+			font-size: 2.5rem;
+		}
+
 		@media (prefers-color-scheme: light) {
 			:root {
 				--background: #f5f5f3;
