--- a/content/src/app.html
+++ b/content/src/app.html
@@ -1,75 +1,75 @@
 <!DOCTYPE html>
+<style>
+	html {
+		display: flex;
+		width: 100vw;
+		margin: 0;
+		padding: 0;
+		background-color: var(--background);
+		color: var(--foreground);
+		font-family: 'Helvetica';
+	}
+
+	:root {
+		--background: rgb(14, 14, 14);
+		--foreground: white;
+		--border: rgb(58, 58, 58);
+		--line-color: #49a4ff;
+	}
+
+	h1,
+	h2 {
+		text-align: left;
+		font-weight: bold;
+		font-style: italic;
+		text-shadow: var(--foreground) 1px 0 10px;
+	}
+
+	h1 {
+		line-height: 50px;
+		font-size: 4rem;
+	}
+
+	h2 {
+		font-size: 2.5rem;
+		font-family: 'Computer Modern';
+		line-height: 40px;
+		text-decoration: underline 1px var(--foreground);
+	}
+
+	h3 {
+		font-size: 1.5rem;
+	}
+
+	p {
+		font-size: 1.1rem;
+	}
+
+	@media (prefers-color-scheme: light) {
+		:root {
+			--background: #f5f5f3;
+			--foreground: rgb(14, 14, 14);
+			--border: rgb(214, 214, 214);
+		}
+	}
+
+	@font-face {
+		font-family: 'ProFontWindows';
+		src: url('/fonts/ProFontWindows.ttf');
+	}
+
+	@font-face {
+		font-family: 'Computer Modern';
+		font-style: italic;
+		src: url('/fonts/cmunci.ttf');
+	}
+</style>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		%sveltekit.head%
 	</head>
-	<style>
-		body {
-			display: flex;
-			width: 100vw;
-			margin: 0;
-			padding: 0;
-			background-color: var(--background);
-			color: var(--foreground);
-			font-family: 'Helvetica';
-		}
-
-		:root {
-			--background: rgb(14, 14, 14);
-			--foreground: white;
-			--border: rgb(58, 58, 58);
-			--line-color: #49a4ff;
-		}
-
-		h1,
-		h2 {
-			text-align: left;
-			font-weight: bold;
-			font-style: italic;
-			text-shadow: var(--foreground) 1px 0 10px;
-		}
-
-		h1 {
-			line-height: 50px;
-			font-size: 4rem;
-		}
-
-		h2 {
-			font-size: 2.5rem;
-			font-family: 'Computer Modern';
-			line-height: 40px;
-			text-decoration: underline 1px var(--foreground);
-		}
-
-		h3 {
-			font-size: 1.5rem;
-		}
-
-		p {
-			font-size: 1.1rem;
-		}
-
-		@media (prefers-color-scheme: light) {
-			:root {
-				--background: #f5f5f3;
-				--foreground: rgb(14, 14, 14);
-				--border: rgb(214, 214, 214);
-			}
-		}
-
-		@font-face {
-			font-family: 'ProFontWindows';
-			src: url('/fonts/ProFontWindows.ttf');
-		}
-
-		@font-face {
-			font-family: 'Computer Modern';
-			font-style: italic;
-			src: url('/fonts/cmunci.ttf');
-		}
-	</style>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
