feat: remove margin on body
Signed-off-by: Matt Gleich <git@mattglei.ch>

--- a/content/src/app.html
+++ b/content/src/app.html
@@ -10,6 +10,10 @@
 		font-family: 'Helvetica';
 	}
 
+	body {
+		margin: 0;
+	}
+
 	:root {
 		--background: rgb(14, 14, 14);
 		--foreground: white;
