feat: remove text-shadow in light mode
Signed-off-by: Matt Gleich <git@mattglei.ch>

--- a/content/src/app.html
+++ b/content/src/app.html
@@ -52,6 +52,11 @@
 			--foreground: rgb(14, 14, 14);
 			--border: rgb(214, 214, 214);
 		}
+
+		h1,
+		h2 {
+			text-shadow: none;
+		}
 	}
 
 	@font-face {
