--- a/content/src/app.html
+++ b/content/src/app.html
@@ -52,6 +52,20 @@
 		font-size: 1rem;
 	}
 
+	p,
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		margin: 0;
+	}
+
+	a {
+		color: #49a4ff;
+	}
+
 	@media (prefers-color-scheme: light) {
 		:root {
 			--background: #f5f5f3;
