--- a/content/src/app.html
+++ b/content/src/app.html
@@ -110,6 +110,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"" />
+		<meta name="theme-color" content="#f5f5f3" media="(prefers-color-scheme: light)" />
+		<meta name="theme-color" content="#0E0E0E" media="(prefers-color-scheme: dark)" />
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
