--- a/content/src/app.html
+++ b/content/src/app.html
@@ -107,7 +107,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"" />
 		<meta name="theme-color" content="#f5f5f3" media="(prefers-color-scheme: light)" />
 		<meta name="theme-color" content="#0E0E0E" media="(prefers-color-scheme: dark)" />
