feat: font smoothing
Signed-off-by: Matt Gleich <git@mattglei.ch>

--- a/content/src/app.html
+++ b/content/src/app.html
@@ -10,6 +10,8 @@
 		font-family: 'Helvetica';
 		overflow-x: hidden;
 		scrollbar-color: var(--border);
+		-webkit-font-smoothing: antialiased;
+		text-rendering: optimizeLegibility;
 	}
 
 	::-webkit-scrollbar {
