--- a/content/src/app.html
+++ b/content/src/app.html
@@ -7,7 +7,7 @@
 		padding: 0;
 		background-color: var(--background);
 		color: var(--foreground);
-		font-family: 'Helvetica';
+		font-family: -apple-system, 'Helvetica';
 		overflow-x: hidden;
 		scrollbar-color: var(--border);
 		-webkit-font-smoothing: antialiased;
